scode/AbtalAlDigital/prob7/error.txt
  File "/var/www/html/scode/AbtalAlDigital/prob7/main.py", line 12
    for a in range z:
                   ^
SyntaxError: invalid syntax
